Fix not showing correct currency in multi currency category report

The basic fix has been extracted from the 4.8 branch.

BUG:448788
FIXED-IN:5.2